add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)

add_executable(helloWorld2 helloWorld2.cpp)
add_executable(aufgabe-1-3 aufgabe-1-3.cpp)
add_executable(aufgabe-1-8 aufgabe-1-8.cpp)
add_executable(aufgabe-1-9 aufgabe-1-9.cpp)
add_executable(aufgabe-1-10 aufgabe-1-10.cpp)
add_executable(aufgabe-1-13 aufgabe-1-13.cpp)
add_executable(aufgabe-1-14 aufgabe-1-14.cpp)
add_executable(aufgabe-1-11 aufgabe-1-11.cpp)
